Complete Copy refactor, now it supports all possible variations (Local->Local, Local->NonLocal, NonLocal->Local and NonLocal->NonLocal)

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Extensions\MethodInfoExtensions.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Extensions\LongExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\ToBigEndian.cs" />
     <Compile Include="Extensions\ToByteArray.cs" />
     <Compile Include="Extensions\VersionExtensions.cs" />
