--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -166,9 +166,6 @@
     <Compile Include="Views\Dialogs\NewConnectionDialog.xaml.cs">
       <DependentUpon>NewConnectionDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Dialogs\NewFolderDialog.xaml.cs">
-      <DependentUpon>NewFolderDialog.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\Dialogs\ReadErrorDialog.xaml.cs">
       <DependentUpon>ReadErrorDialog.xaml</DependentUpon>
     </Compile>
@@ -249,10 +246,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\Dialogs\NewFolderDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Views\Dialogs\ReadErrorDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -322,6 +315,8 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\icon.ico" />
+    <Resource Include="Resources\clipboard_sign.png" />
+    <Resource Include="Resources\cog.png" />
     <Content Include="Resources\Connections\AddConnection.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -364,6 +359,9 @@
     <Content Include="Resources\hidden_achivement.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Resources\refresh.png" />
+    <Resource Include="Resources\rename.png" />
+    <Resource Include="Resources\search.png" />
     <Content Include="Resources\up.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
