--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -103,7 +103,7 @@
     <Compile Include="Constants\TitleType.cs" />
     <Compile Include="Constants\ToggleSelectionMode.cs" />
     <Compile Include="Constants\TransferErrorType.cs" />
-    <Compile Include="Constants\TransferProgressDialogMode.cs" />
+    <Compile Include="Constants\TransferType.cs" />
     <Compile Include="ContentProviders\CacheManager.cs" />
     <Compile Include="ContentProviders\FtpContent.cs" />
     <Compile Include="ContentProviders\LocalFileSystemContent.cs" />
@@ -114,7 +114,7 @@
     <Compile Include="Converters\SizeAlignmentConverter.cs" />
     <Compile Include="Converters\SizeConverter.cs" />
     <Compile Include="Converters\TitleConverter.cs" />
-    <Compile Include="Converters\TransferProgressDialogModeConverter.cs" />
+    <Compile Include="Converters\TransferTypeConverter.cs" />
     <Compile Include="Events\ActivePaneChangedEvent.cs" />
     <Compile Include="Events\CloseNestedPaneEvent.cs" />
     <Compile Include="Events\OpenNestedPaneEvent.cs" />
@@ -134,6 +134,7 @@
     <Compile Include="Models\CacheEntry.cs" />
     <Compile Include="Models\FileSystemItem.cs" />
     <Compile Include="Models\FtpConnection.cs" />
+    <Compile Include="Models\QueueItem.cs" />
     <Compile Include="Models\RecognitionInformation.cs" />
     <Compile Include="Models\TransferErrorDialogResult.cs" />
     <Compile Include="ViewModels\ConnectionsViewModel.cs" />
@@ -406,7 +407,11 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\package.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
