--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Core/Neurotoxin.Godspeed.Core.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Constants\VolumeDescriptorType.cs" />
     <Compile Include="Constants\XboxLiveServiceProvider.cs" />
     <Compile Include="Exceptions\ModelFactoryException.cs" />
+    <Compile Include="Exceptions\TelnetException.cs" />
     <Compile Include="Extensions\ByteArrayExtensions.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
@@ -146,6 +147,7 @@
     <Compile Include="Io\Stfs\Package.cs" />
     <Compile Include="Io\Stfs\Data\StfsVolumeDescriptor.cs" />
     <Compile Include="Models\OffsetTable.cs" />
+    <Compile Include="Net\Telnet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\RC4.cs" />
   </ItemGroup>
