--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/packages.config
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Ftp.dll" version="2.0.13217.1550" targetFramework="net40" />
+  <package id="sharpcompress" version="0.10.1.3" targetFramework="net40-Client" />
 </packages>
